# quantum-storage

./: .gitignore  .goreleaser.yml  Dockerfile  README.md  default-sample.toml  host-init.sh  host.sh  init.sh  zdb-hook.sh
.github/workflows/: publish_container_image.yml  release.yml  releases.yaml
_archive/bootstrap/: bootstrap.v  build.sh
_archive/docker/: troubleshooting.md
_archive/docker-tests/: zstor_config.toml
_archive/tools/: Makefile  (+1 more)
auto/: auto.v
bootstrap/: bootstrap.v  build.sh
config/: zstor-sample-ipv4.toml  zstor-sample-local.toml
docker/: Dockerfile  README.md  check_zstor.c  create_namespaces  create_namespaces.c  docker.md  entrypoint.sh  hook.sh  sample-zstor.toml  setup.sh  troubleshooting.md  zstor_config.toml
docs/: 01_overview.md  02_planning.md  03_deployment.md  03_deployment_options.md  04_operating.md  05_deploy_pulumi.md  06_operating.md  07_troubleshooting.md  docs.md  encryption.md  example_zstor_config.toml  manual_setup.md  operations.md  troubleshooting.md
legacy/: nscreate.v
lib/: retry-uploads.sh  zdb-hook.sh
pulumi/: .gitignore  Pulumi.yaml  README.md  __main__.py  create_toml.py  create_vars.py  post_deploy.sh  prometheus.example.yaml  util.py  vars.example.py  zstor_config.base.example.toml
quantum-daemon/: Dockerfile  config.example.yaml  go.mod  main.go
quantumd/: .goreleaser.yml  Dockerfile  Makefile  README.md  config.example.yaml  go.mod  go.sum  main.go
s3/: README.md
tools/: zdb-test.py  zdbctl.c
zdbfs-flist/: build.sh
zstor-metadata-decoder/: Cargo.toml
zstor-metadata-decoder/src/: main.rs
(+136 files in other folders)
