[package]
name = "zstor-metadata-decoder"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "zstor-metadata-decoder"
path = "src/main.rs"

[dependencies]
zstor_v2 = { git = "https://github.com/threefoldtech/0-stor_v2", tag = "v0.5.0-rc.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
